proxima/apps/files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-files
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-files
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-files
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        fsGroup: 65532
        fsGroupChangePolicy: "Always"
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
      - name: regcred
      containers:
      - name: container
        image: ghcr.io/sigurs/simple-file-upload/simple-file-upload:202510052110
        ports:
          - containerPort: 5000
            name: http
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        volumeMounts:
          - name: tmp
            mountPath: /tmp
          - name: appdata
            mountPath: /appdata
      volumes:
      - name: tmp
        emptyDir:
          sizeLimit: 2Gi
      - name: appdata
        persistentVolumeClaim:
          claimName: app-files-appdata
