proxima/apps/files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-files
spec:
  selector:
    app.kubernetes.io/name: app-files
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
