proxima/apps/files/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: apps-files
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: infra-cloudflared
            io.kubernetes.pod.namespace: infra-cloudflared
  egress:
    - {}
